Mongo is connected

--- a/public/index.html
+++ b/public/index.html
@@ -39,12 +39,12 @@
 
         <!-- Dashboard -->
         <div id="main-wrapper" class="grid lg:grid-cols-3 gap-10 items-center p-2">
-            <div class="border-2 text-center rounded-xl p-2 shadow-md"><h1>22:53</h1><h1>30-Sept-2024</h1></div>
-            <div class="border-2 text-center rounded-xl p-2 shadow-md">Daily Goals</div>
-            <div class="border-2 text-center rounded-xl p-2 shadow-md">Weekly Goals</div>
-            <div class="border-2 text-center rounded-xl p-2 shadow-md">Food for thought</div>
-            <div class="border-2 text-center rounded-xl p-2 shadow-md">Notes</div>
-            <div class="border-2 text-center rounded-xl p-2 shadow-md"><h1>Pomodoro</h1><h1>30:00</h1><button>start</button></div>
+            <div class="border-2 text-center rounded-xl p-2 shadow-sm"><h1>22:53</h1><h1>30-Sept-2024</h1></div>
+            <div class="border-2 text-center rounded-xl p-2 shadow-sm">Daily Goals</div>
+            <div class="border-2 text-center rounded-xl p-2 shadow-sm">Weekly Goals</div>
+            <div class="border-2 text-center rounded-xl p-2 shadow-sm">Food for thought</div>
+            <div class="border-2 text-center rounded-xl p-2 shadow-sm">Notes</div>
+            <div class="border-2 text-center rounded-xl p-2 shadow-sm"><h1>Pomodoro</h1><h1>30:41</h1><button>start</button></div>
         </div>
 
 
